fix(GRaPPA): adjust some bugs in the integration
